[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/Game/theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Game-Scenes/DeathScreen.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RESET"

[node name="DeathScreen" type="Node2D"]
script = ExtResource( 3 )
anim_speed = 5

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
color = Color( 0.0627451, 0, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeathLabel" type="RichTextLabel" parent="."]
anchor_right = 10.0
margin_left = 64.0
margin_top = 100.0
margin_right = 156.0
margin_bottom = 132.0
rect_scale = Vector2( 8, 8 )
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0.117647, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0156863, 1, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeAlive" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 320.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.117647, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0156863, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveReached" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 352.0
margin_right = 256.0
margin_bottom = 416.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.117647, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0156863, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesKilled" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 256.0
margin_bottom = 512.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.117647, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0156863, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelperText" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 704.0
margin_right = 384.0
margin_bottom = 776.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0.117647, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0156863, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 2 )
